# moses

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start.sh
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  settings.rs  setup.rs
apps/desktop/src-tauri/src/agent/: loop_.rs  mod.rs  prompts.rs  task.rs  tests.rs  tools.rs
apps/desktop/src-tauri/src/bridge/: websocket.rs
apps/desktop/src-tauri/src/llm/: client.rs
apps/desktop/src-tauri/src/memory/: long_term.rs  mod.rs  short_term.rs
apps/desktop/src-tauri/src/patch/: apply.rs
apps/desktop/src-tauri/src/security/: sandbox.rs
apps/desktop/src-tauri/src/workspace/: context.rs  file_tree.rs  indexer.rs  mod.rs  vector_store.rs  watcher.rs
apps/desktop/src/components/Chat/: ChatPanel.tsx
apps/desktop/src/components/DiffViewer/: DiffBar.tsx
apps/desktop/src/components/FileExplorer/: FileExplorer.tsx
apps/desktop/src/components/ModelControl/: ModelControl.tsx
apps/desktop/src/components/Setup/: SetupScreen.tsx
apps/desktop/src/components/StatusBar/: StatusBar.tsx
apps/desktop/src/store/: index.ts
apps/vscode-extension/: package.json
apps/vscode-extension/src/: BridgeClient.ts  extension.ts
scripts/: setup-light.sh  setup.sh
