[package]
name = "moses-desktop"
version = "0.1.0"
description = "Moses - Local AI Coding Assistant"
authors = ["Moses Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-open", "fs-read-file", "fs-write-file", "fs-read-dir", "fs-create-dir", "fs-exists", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
walkdir = "2"
anyhow = "1"
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
once_cell = "1"
notify = "6"

[features]
custom-protocol = ["tauri/custom-protocol"]
